Fix incorrect size of VideoClip applet.

BUG: 247097